# chip-8-wasm

./: config-overrides.js  package-lock.json  package.json
public/: index.html
public/roms/: test2.txt
src/: index.css
src/components/: App.tsx  Controls.tsx  Disassembly.tsx  PlayPauseButton.tsx  Registers.tsx  RomSelector.tsx  Runner.ts  Stack.tsx  Table.tsx
src/native/: Cargo.toml
src/native/src/: interpreter.rs  lib.rs  wasm_platform_adapter.rs
