[package]
name = "chip-8-wasm"
version = "0.1.0"
authors = ["Cameron Pascal <cameron@cameron.dev>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
chip-8-core = { path = "../../../chip-8-core", version = "0.1.0" }
wasm-bindgen = "0.2.78"
console_error_panic_hook = "0.1.7"
wee_alloc = "0.4.5"
js-sys = "0.3.55"

[dependencies.web-sys]
version = "0.3.55"
features = [
    'AudioContext',
    'AudioDestinationNode',
    'AudioNode',
    'AudioParam',
    'KeyboardEvent',
    'console',
    'OscillatorNode',
    'OscillatorType',
]

[dev-dependencies]
wasm-bindgen-test = "0.3.28"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
